--- a/art.html
+++ b/art.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="./assets/styles/julia.css">
 </head>
 <body>
-    <a href="./index.html"><-</a>
-    <h1>Gere artes aleatoriamente!!</h1>
+    <a href="./index.html"><img id="logo" src="./assets/img/logo2.png"></a>
+    <h1>Gerar arte aleatória</h1>
 
     <div class='container'>
         <canvas class='mandel-canvas' style="display:none"></canvas>
