--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="duração">
             <div class="barra">
-                <input type="range" id="timer" min="0" max="100" value="0">
+                <input type="range" id="timer" value="0" min="0" max="50" onchange="roll()">
             </div>
             <div class="container">
                 <p class="inicio">00:00</p>
